# controller/movie_controller.go
@@ -11,7 +11,6 @@ import (
 // @Accept json
 // @Produce json
 // @Param title query string false "Movie title to search"
-// @Param genre query string false "Movie genre to search"
 // @Success 200 {object} models.MoviesResponse
 // @Failure 400 {object} models.ErrorResponse "Bad Request"
 // @Failure 500 {object} models.ErrorResponse "Internal Server Error"
@@ -19,25 +18,39 @@ import (
 func SearchMovies(c *gin.Context) {
 }
 
+// SearchMovies godoc
+// @Summary Search cinema
+// @Description Search cinema
+// @Tags Guest
+// @Accept json
+// @Produce json
+// @Param name query string false "Cinema name to search"
+// @Success 200 {object} models.BranchDetailResponse
+// @Failure 400 {object} models.ErrorResponse "Bad Request"
+// @Failure 500 {object} models.ErrorResponse "Internal Server Error"
+// @Router /branch/search [get]
+func SearchCinema(c *gin.Context) {
+}
+
 // AddWishlist godoc
-// @Summary Add Wishlist
-// @Description Add Wishlist
+// @Summary Add Watchlist
+// @Description Add Watchlist
 // @Tags Customer
 // @Accept json
 // @Produce json
 // @Param customerId path int true "Customer ID"
-// @Param body body models.MovieSchedule true "Whislist details"
+// @Param body body models.MovieSchedule true "Watchlist details"
 // @Success 200 {object} models.MovieSchedulesResponse
 // @Failure 400 {object} models.ErrorResponse "Bad Request"
 // @Failure 401 {object} models.ErrorResponse "Unauthorized"
 // @Failure 500 {object} models.ErrorResponse "Internal Server Error"
-// @Router /customer/{customerId}/wishlist [post]
-func AddWishlist(c *gin.Context) {
+// @Router /customer/{customerId}/watchlist [post]
+func AddWatchlist(c *gin.Context) {
 }
 
 // getWishlist godoc
-// @Summary Get Wishlist
-// @Description Get Wishlist
+// @Summary Get Watchlist
+// @Description Get Watchlist
 // @Tags Customer
 // @Accept json
 // @Produce json
@@ -46,21 +59,21 @@ func AddWishlist(c *gin.Context) {
 // @Failure 400 {object} models.ErrorResponse "Bad Request"
 // @Failure 401 {object} models.ErrorResponse "Unauthorized"
 // @Failure 500 {object} models.ErrorResponse "Internal Server Error"
-// @Router /customer/{customerId}/wishlist [get]
-func GetWishlist(c *gin.Context) {
+// @Router /customer/{customerId}/watchlist [get]
+func GetWatchlist(c *gin.Context) {
 }
 
-// DeleteWishlist godoc
-// @Summary Delete Wishlist
-// @Description Delete Wishlist
+// DeleteWatchlist godoc
+// @Summary Delete Watchlist
+// @Description Delete Watchlist
 // @Tags Customer
 // @Accept json
 // @Produce json
-// @Param WishlistId path int true "Wishlist ID"
+// @Param WatchlistId path int true "Watchlist ID"
 // @Success 200 {object} models.Response
 // @Failure 400 {object} models.ErrorResponse "Bad Request"
 // @Failure 401 {object} models.ErrorResponse "Unauthorized"
 // @Failure 500 {object} models.ErrorResponse "Internal Server Error"
-// @Router /customer/{customerId}/wishlist [delete]
-func DeleteWishlist(c *gin.Context) {
+// @Router /customer/{customerId}/watchlist [delete]
+func DeleteWatchlist(c *gin.Context) {
 }
