# models/branch.go
@@ -1,9 +1,20 @@
 package models
 
+import "time"
+
 type Branch struct {
 	ID      int    `json:"id,omitempty"`
 	Name    string `json:"name"`
 	Address string `json:"address"`
+}
+
+type BranchDetail struct {
+	ID          int        `json:"id,omitempty"`
+	Name        string     `json:"name"`
+	Address     string     `json:"address"`
+	MallAccess  string     `json:"mall access"`
+	ParkingArea string     `json:"parking area`
+	Operational *time.Time `json: "operational hours"`
 }
 
 type BranchesResponse struct {
@@ -13,4 +24,8 @@ type BranchesResponse struct {
 type BranchResponse struct {
 	Response
 	Branch Branch `json:"data"`
+}
+type BranchDetailResponse struct {
+	Response
+	BranchDetail BranchDetail `json:"data"`
 }
